--- a/react-firebase-auth/package.json
+++ b/react-firebase-auth/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-firebase-auth",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "firebase": "^5.9.0",
     "react": "^16.8.4",
