--- a/react-firebase-auth/package.json
+++ b/react-firebase-auth/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "react-firebase-auth",
-  "version": "0.1.0",
+  "name": "hca-react-firebase-auth",
+  "version": "1.0.2",
   "private": false,
   "dependencies": {
     "firebase": "^5.9.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "rinse-react": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
